rust/cambium-codegen/tests/compile-fail/_generated_user_ordered_vec.rs

// Generated by cambium-codegen for module "ordering-nested-user-cascading".
// Do not edit by hand.

/// Trait implemented by every generated YANG data struct.
pub trait CambiumStruct {
	/// Serialize this node and its descendants to XML.
	fn to_xml(&self) -> String;
	/// Serialize this node and its descendants to JSON_IETF.
	fn to_json_ietf(&self) -> String;
}

/// Generated data node container for YANG structure `OrderingNestedUserCascadingTop`.
#[derive(Debug, Clone, Default, PartialEq, Eq)]
pub struct OrderingNestedUserCascadingTop {
/// Generated YANG list `statement`.
	pub statement: UserOrderedVec<OrderingNestedUserCascadingTopStatementEntry>,
}

impl OrderingNestedUserCascadingTop {
	/// Field-order manifest: keys first, then schema declaration order.
	pub const FIELD_ORDER: &[&str] = &["statement"];

	/// Serialize this node and its descendants to XML.
	pub fn write_xml(&self, w: &mut String, depth: usize) {
		let indent = " ".repeat(depth * 2);
		for entry in self.statement.iter() {
			w.push_str(&format!("{}<statement>\n", &indent));
			entry.write_xml(w, depth + 1);
			w.push_str(&format!("{}</statement>\n", &indent));
		}
	}

	/// Serialize this node and its descendants to JSON_IETF.
	pub fn write_json(&self, w: &mut String, depth: usize) {
		if !self.has_content() {
			w.push_str("{}");
			return;
		}
		w.push('{');
		let mut first = true;
		if std::mem::take(&mut first) {} else { w.push(','); }
		cambium_json_indent(w, depth + 1);
		w.push_str("\"statement\": ");
		w.push('[');
		for (i, entry) in self.statement.iter().enumerate() {
			if i > 0 { w.push(','); }
			cambium_json_indent(w, depth + 2);
			entry.write_json(w, depth + 2);
		}
		cambium_json_indent(w, depth + 1);
		w.push(']');
		cambium_json_indent(w, depth);
		w.push('}');
	}

	/// Serialize this node and its descendants to XML.
	pub fn to_xml(&self) -> String {
		let mut s = String::new();
		self.write_xml(&mut s, 0);
		s
	}

	/// Serialize this node and its descendants to JSON_IETF.
	pub fn to_json_ietf(&self) -> String {
		let mut s = String::new();
		self.write_json(&mut s, 0);
		s
	}

	/// Returns true if this node carries any descendant content.
	pub fn has_content(&self) -> bool {
		!self.statement.is_empty()
	}

}

impl CambiumStruct for OrderingNestedUserCascadingTop {
	fn to_xml(&self) -> String { self.to_xml() }
	fn to_json_ietf(&self) -> String { self.to_json_ietf() }
}

/// Generated data node container for YANG structure `OrderingNestedUserCascadingTopStatementEntry`.
#[derive(Debug, Clone, Default, PartialEq, Eq)]
pub struct OrderingNestedUserCascadingTopStatementEntry {
/// Generated YANG leaf `name`.
	pub name: String,
/// Generated YANG leaf-list `actions`.
	pub actions: UserOrderedVec<String>,
}

impl OrderingNestedUserCascadingTopStatementEntry {
	/// Field-order manifest: keys first, then schema declaration order.
	pub const FIELD_ORDER: &[&str] = &["name", "actions"];

	/// Serialize this node and its descendants to XML.
	pub fn write_xml(&self, w: &mut String, depth: usize) {
		let indent = " ".repeat(depth * 2);
			w.push_str(&format!("{}<name>{}</name>\n", &indent, cambium_xml_escape_text(&self.name.to_string())));
		for v in self.actions.iter() {
			w.push_str(&format!("{}<actions>{}</actions>\n", &indent, cambium_xml_escape_text(&v.to_string())));
		}
	}

	/// Serialize this node and its descendants to JSON_IETF.
	pub fn write_json(&self, w: &mut String, depth: usize) {
		if !self.has_content() {
			w.push_str("{}");
			return;
		}
		w.push('{');
		let mut first = true;
		if std::mem::take(&mut first) {} else { w.push(','); }
		cambium_json_indent(w, depth + 1);
		w.push_str(&format!("\"name\": {}", cambium_json_escape(self.name.as_str())));
		if std::mem::take(&mut first) {} else { w.push(','); }
		cambium_json_indent(w, depth + 1);
		w.push_str("\"actions\": ");
		w.push('[');
		for (i, v) in self.actions.iter().enumerate() {
			if i > 0 { w.push(','); }
			cambium_json_indent(w, depth + 2);
			w.push_str(&cambium_json_escape(v.as_str()));
		}
		cambium_json_indent(w, depth + 1);
		w.push(']');
		cambium_json_indent(w, depth);
		w.push('}');
	}

	/// Serialize this node and its descendants to XML.
	pub fn to_xml(&self) -> String {
		let mut s = String::new();
		self.write_xml(&mut s, 0);
		s
	}

	/// Serialize this node and its descendants to JSON_IETF.
	pub fn to_json_ietf(&self) -> String {
		let mut s = String::new();
		self.write_json(&mut s, 0);
		s
	}

	/// Returns true if this node carries any descendant content.
	pub fn has_content(&self) -> bool {
		true
	}

}

impl CambiumStruct for OrderingNestedUserCascadingTopStatementEntry {
	fn to_xml(&self) -> String { self.to_xml() }
	fn to_json_ietf(&self) -> String { self.to_json_ietf() }
}

/// Generated data node container for YANG structure `OrderingNestedUserCascading`.
#[derive(Debug, Clone, Default, PartialEq, Eq)]
pub struct OrderingNestedUserCascading {
/// Generated YANG container `top`.
	pub top: OrderingNestedUserCascadingTop,
}

impl OrderingNestedUserCascading {
	/// Field-order manifest: keys first, then schema declaration order.
	pub const FIELD_ORDER: &[&str] = &["top"];
}

impl OrderingNestedUserCascading {
	/// XML namespace for module "ordering-nested-user-cascading".
	pub const MODULE_NS: &str = "urn:ordering-nested-user-cascading";

	/// Serialize the top-level data nodes to XML.
	pub fn to_xml(&self) -> String {
		let mut s = String::new();
		if self.top.has_content() {
			if self.top.has_content() {
				s.push_str("<top xmlns=\"urn:ordering-nested-user-cascading\">\n");
				self.top.write_xml(&mut s, 1);
				s.push_str("</top>\n");
			} else {
				s.push_str("<top xmlns=\"urn:ordering-nested-user-cascading\"/>\n");
			}
		}
		s
	}

	/// Module name for JSON_IETF namespace boundaries.
	pub const MODULE_NAME: &str = "ordering-nested-user-cascading";

	/// Serialize the top-level data nodes to JSON_IETF.
	pub fn to_json_ietf(&self) -> String {
		let mut s = String::new();
		s.push('{');
		let mut first = true;
		if self.top.has_content() {
			if std::mem::take(&mut first) {} else { s.push(','); }
			cambium_json_indent(&mut s, 1);
		s.push_str("\"ordering-nested-user-cascading:top\": ");
		self.top.write_json(&mut s, 1);
		}
		cambium_json_indent(&mut s, 0);
		s.push('}');
		s.push('\n');
		s
	}
}

impl CambiumStruct for OrderingNestedUserCascading {
	fn to_xml(&self) -> String { self.to_xml() }
	fn to_json_ietf(&self) -> String { self.to_json_ietf() }
}

/// Escape `&`, `<`, and `>` for XML text nodes.
fn cambium_xml_escape_text(s: &str) -> String {
    let mut out = String::with_capacity(s.len());
    for c in s.chars() {
        match c {
            '&' => out.push_str("&amp;"),
            '<' => out.push_str("&lt;"),
            '>' => out.push_str("&gt;"),
            _ => out.push(c),
        }
    }
    out
}

/// Write a newline followed by `depth` two-space indents.
fn cambium_json_indent(w: &mut String, depth: usize) {
    w.push('\n');
    for _ in 0..depth {
        w.push_str("  ");
    }
}

/// Render a string as a JSON string literal, including the surrounding quotes.
///
/// Matches libyang's `json_print_string` byte-for-byte: only `"`, `\`, `\r`, and
/// `\t` use named escapes; every other control character (including `\n`, `\b`,
/// `\f`, and DEL `0x7F`) is emitted as `\uXXXX` with uppercase hex; all other
/// characters (including multi-byte UTF-8) pass through unchanged.
fn cambium_json_escape<S: AsRef<str>>(s: S) -> String {
    let s = s.as_ref();
    let mut out = String::with_capacity(s.len() + 2);
    out.push('"');
    for c in s.chars() {
        match c {
            '"' => out.push_str("\\\""),
            '\\' => out.push_str("\\\\"),
            '\r' => out.push_str("\\r"),
            '\t' => out.push_str("\\t"),
            c if c.is_ascii_control() => out.push_str(&format!("\\u{:04X}", c as u32)),
            c => out.push(c),
        }
    }
    out.push('"');
    out
}

// ----------------------------------------------------------------------------
// Inline helper types used by the generated schema above.
// ----------------------------------------------------------------------------
/// Positional-only ordered container for `ordered-by user` data nodes.
#[derive(Debug, Clone, Default, PartialEq, Eq)]
pub struct UserOrderedVec<T> {
    items: Vec<T>,
}

impl<T> UserOrderedVec<T> {
    /// Create an empty container.
    pub fn new() -> Self {
        Self { items: Vec::new() }
    }

    /// Insert `value` at the front of the list.
    pub fn insert_first(&mut self, value: T) {
        self.items.insert(0, value);
    }

    /// Insert `value` at the back of the list.
    pub fn insert_last(&mut self, value: T) {
        self.items.push(value);
    }

    /// Insert `value` immediately before `index`.
    pub fn insert_before(&mut self, index: usize, value: T) {
        self.items.insert(index, value);
    }

    /// Insert `value` immediately after `index`.
    pub fn insert_after(&mut self, index: usize, value: T) {
        self.items.insert(index + 1, value);
    }

    /// Move the element at `what` to immediately before `point`.
    pub fn move_before(&mut self, what: usize, point: usize) {
        if what == point {
            return;
        }
        let item = self.items.remove(what);
        let insert_at = if what < point { point - 1 } else { point };
        self.items.insert(insert_at, item);
    }

    /// Move the element at `what` to immediately after `point`.
    pub fn move_after(&mut self, what: usize, point: usize) {
        if what == point {
            return;
        }
        let item = self.items.remove(what);
        let insert_at = if what < point { point } else { point + 1 };
        self.items.insert(insert_at, item);
    }

    /// Remove and return the element at `index`.
    pub fn remove(&mut self, index: usize) -> T {
        self.items.remove(index)
    }

    /// Return the number of elements.
    pub fn len(&self) -> usize {
        self.items.len()
    }

    /// Return true if there are no elements.
    pub fn is_empty(&self) -> bool {
        self.items.is_empty()
    }

    /// Borrow the element at `index`, if present.
    pub fn get(&self, index: usize) -> Option<&T> {
        self.items.get(index)
    }

    /// Iterate over the elements in their current order.
    pub fn iter(&self) -> impl Iterator<Item = &T> {
        self.items.iter()
    }
}

/// Convert a `Vec<T>` into a `UserOrderedVec<T>`.
impl<T> From<Vec<T>> for UserOrderedVec<T> {
    fn from(items: Vec<T>) -> Self {
        Self { items }
    }
}
